--- a/package.json
+++ b/package.json
@@ -3,13 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/material": "^5.15.15",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "material-ui": "^0.20.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-mui-login-register": "^0.7.3",
+    "react-redux": "^9.1.1",
+    "react-router": "^6.23.0",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.2.2",
+    "styled-components": "^6.1.9",
+    "time-data": "^1.0.1",
+    "typescript": "^5.4.5",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "typescript": "^5.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
