--- a/package.json
+++ b/package.json
@@ -3,29 +3,44 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.3.6",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.17.0",
+    "axios": "^1.6.8",
+    "formik": "^2.4.6",
+    "framer-motion": "^11.1.7",
     "material-ui": "^0.20.2",
+    "query-string": "^9.0.0",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
+    "react-element-to-jsx-string": "^15.0.0",
     "react-mui-login-register": "^0.7.3",
+    "react-number-format": "^5.3.4",
     "react-redux": "^9.1.1",
     "react-router": "^6.23.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "reactstrap": "^9.2.2",
+    "simplebar-react": "^3.2.4",
     "styled-components": "^6.1.9",
     "time-data": "^1.0.1",
     "typescript": "^5.4.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "typescript": "^5.4.5"
